--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="google-signin-client_id" content="879839274202-2gfd21q2jl5475ucqbsotj2215mb7le5.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
